--- a/infstyle.css
+++ b/infstyle.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0px;
 	background-color: #e9e8e4;
-	/*font-family: 'Didact Gothic', sans-serif;*/
+/*    font-family: 'Didact Gothic', sans-serif;*/
 }
 header{
 	overflow: hidden;
@@ -83,87 +83,121 @@ nav ul{
 	margin: 0 auto;
 	display: inline-block;
 }
+/*-slider----------------------*/
+
+/*--Border+-----------------------------*/
+.content > h1{
+	text-align: center;
+	font-size: 50px;
+	margin: 0 auto;
+}
+.border{
+	display: flow-root;
+	padding: 25px;
+	border: solid;
+	border-width: 5px;
+	border-color: black;
+	margin-right: 10px;
+	margin-left: 10px;
+}
+.texts{
+	font-size:20px;
+	text-align: justify;
+	display: inline-block;
+}
+.image1{
+	margin-left: 10px;
+	margin-bottom: 10px;
+	/*position: static;*/
+	display: inline-block;
+	float: right;
+	width: 300px;
+	height: auto;
+}
 /*-Table----------------------------------*/
-.Tr1{
-	display: block;
-	text-align: center;
+.Tbl{
 	margin: 0 auto;
-	margin-left: 15px;
-}
-.Tr1 .Cell{
-	display: inline-block;
-	overflow: hidden;
-	margin-right: 15px;
-	margin-bottom: 15px; 
-	/*float: left; */
-}
-.Tr1 img{
-	width: auto;
-	height: 170px;
-}
-
-.Tr2{
 	display: block;
-	text-align: center;
-	margin: 0 auto;
-	margin-left: 15px;
+	margin-left: 45px;
+	/*text-align: center;*/
 }
-.Tr2 .Cell{
+.Tbl table{
 	display: inline-block;
-	overflow: hidden;
-	margin-right: 15px;
-	margin-bottom: 15px; 
-	/*float: left; */
-}
-.Tr2 img{
-	width: auto;
-	height: 220px;
-}
 
-.Tr3{
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-	margin-left: 15px;
-}
-.Tr3 .Cell{
-	display: inline-block;
-	overflow: hidden;
-	margin-right: 15px;
-	margin-bottom: 15px; 
-	/*float: left; */
-}
-.Tr3 img{
-	width: auto;
-	height: 220px;
-}
-
-.Tr4{
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-	margin-left: 15px;
-}
-.Tr4 .Cell{
-	display: inline-block;
-	overflow: hidden;
-	margin-right: 15px;
-	margin-bottom: 10px; 
-	/*float: left; */
-}
-.Tr4 img{
-	width: auto;
-	height: 220px;
-}
-
-.Cell:hover{
-	transform: scale(1.07);
 }
 .Cell{
-	transition: all 1s ease-out;
+	width: 300px;
+	height: 400px;
+	overflow: hidden;
+	margin-right: 15px;
+	margin-bottom: 15px;  
+}
+.hovv{
+	background-color: rgba(69, 69, 69, 0);
+	width: 300px;
+	height: 400px;
+	margin-top: -400px;
+}
+.hovv:hover{
+	background-color: rgba(69, 69, 69, 0.5);
+}
+.Cell .imgT{
+	width: 296px;
+	height: 396px;
+	overflow: hidden;
+	border: solid;
+	border-width: 2px;
+	position: absolute;
+}
+.Cell .info{
+	text-align: center;
+	width: 250px;
+	height: 50px;
+	background-color: #e9e8e4;
+	margin: 0 auto;
+	border: solid;
+	border-top-right-radius:15px; 
+	border-top-left-radius:15px; 
+	border-width: 2px;
+	position: relative;
+	margin-top: 346px;
+}
+.Cell .info h1{
+	margin: 0 auto;
+	padding-top: 5px;
+	font-size: 20px; 
+}
+.Cell .info p{
+	margin: 0 auto;
+}
+table .Tr1 .Td1 .imgT img{
+	float: right;	
+	width: 300px;
+	height: auto;
+}
+table .Tr1 .Td2 .imgT img{
+	width: 320px;
+	height: auto;
+}
+table .Tr1 .Td3 .imgT img{
+	width: 550px;
+	height: auto;
+}
+table .Tr2 .Td1 .imgT img{
+	width: 380px;
+	height: auto;
+	float: right;
+}
+table .Tr2 .Td2 .imgT img{
+	width: 340px;
+	height: auto;
+	float: right;
+}
+table .Tr2 .Td3 .imgT img{
+	width: 400px;
+	height: auto;
 }
 /*---footer---------------*/
-
 footer{
 	padding-top: 5px;
 	border-top: solid;
