--- a/infstyle.css
+++ b/infstyle.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0px;
 	background-color: #e9e8e4;
-/*    font-family: 'Didact Gothic', sans-serif;*/
+	font-family: 'Didact Gothic', sans-serif;
 }
 header{
 	overflow: hidden;
@@ -123,7 +123,6 @@ nav ul{
 }
 .Tbl table{
 	display: inline-block;
-
 }
 .Cell{
 	width: 300px;
@@ -133,13 +132,23 @@ nav ul{
 	margin-bottom: 15px;  
 }
 .hovv{
-	background-color: rgba(69, 69, 69, 0);
+	/*display: none;*/
+	background-color: rgba(25, 25, 25, 0);
+	color: rgba(0,0,0,0);
 	width: 300px;
 	height: 400px;
-	margin-top: -400px;
+	margin-top: -420px;
+	position: relative;
+	
+}
+.hovv p{
+	text-align: center;
+	padding: 20px;
+	font-size: 20px;
 }
 .hovv:hover{
-	background-color: rgba(69, 69, 69, 0.5);
+	color: rgba(250,250,250,1);
+	background-color: rgba(25, 25, 25, 0.75);
 }
 .Cell .imgT{
 	width: 296px;
