--- a/stile.css
+++ b/stile.css
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-    color: white;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
@@ -13,17 +13,31 @@ a {
     position: absolute;
     bottom: 1%;
     right: 1%;
-    background-color: rgba(34, 34, 34, .7);
+    background-color: rgb(194, 194, 194);
+    padding: 10px;
+    border-radius: 10%;
 }
 
 .git:hover {
-    background: rgba(0, 0, 0, .3);
-    transform: scale(1.1);
+    background: rgb(250, 250, 250);
     transition: .3s linear;
+    border-radius: 19px;
+    padding: 10px;
 }
 
 .github {
     max-width: 30px;
+}
+
+.links {
+    color: wheat;
+    position: absolute;
+    bottom: 3%;
+    right: 5%;
+}
+
+.links:hover {
+    cursor: default;
 }
 
 .top-menu {
@@ -48,7 +62,7 @@ a {
 }
 
 .right-item {
-    float: right;
+    float: center;
 }
 
 .menu-main a {
@@ -66,4 +80,32 @@ a {
 
 .menu-main a:hover {
     background: rgba(0, 0, 0, .3);
+}
+
+@media (max-width: 830px) {
+    .menu-main {
+        padding-top: 5px;
+        text-align: center;
+    }
+    .navbar-logo {
+        position: absolute;
+        left: 50%;
+        top: 10px;
+        transform: translateX(-50%);
+    }
+    .menu-main li {
+        float: none;
+        display: inline-block;
+    }
+    .menu-main a {
+        line-height: normal;
+        padding: 20px 15px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 630px) {
+    .menu-main li {
+        display: block;
+    }
 }
