--- a/error/style.css
+++ b/error/style.css
@@ -5,6 +5,8 @@ body {
 h1 {
     color: white;
     font-size: 50px;
+    text-align: center;
+    font-family: 'Didact Gothic', sans-serif;
 }
 
 .content {
