--- a/error/style.css
+++ b/error/style.css
@@ -4,6 +4,8 @@ body {
     font-family: 'Didact Gothic', sans-serif;
 }
 
+
+/* 
 @keyframes back {
     from {
         background-position: 100% 1000px, 0 0;
@@ -11,7 +13,7 @@ body {
     to {
         background-position: 100% -1000px, 0 0;
     }
-}
+} */
 
 img {
     margin-top: 90px;
