--- a/error/style.css
+++ b/error/style.css
@@ -4,8 +4,6 @@ body {
     font-family: 'Didact Gothic', sans-serif;
 }
 
-
-/* 
 @keyframes back {
     from {
         background-position: 100% 1000px, 0 0;
@@ -13,7 +11,7 @@ body {
     to {
         background-position: 100% -1000px, 0 0;
     }
-} */
+}
 
 img {
     margin-top: 90px;
