--- a/error/style.css
+++ b/error/style.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(17, 16, 16) url(bg.png) fixed;
+    background: rgb(17, 16, 16) url("../img/bg.png") fixed;
     animation: back 150s linear infinite;
     font-family: 'Didact Gothic', sans-serif;
 }
