--- a/sait/Caravan_Palace/css/Tourstyle.css
+++ b/sait/Caravan_Palace/css/Tourstyle.css
@@ -137,7 +137,8 @@ tr{
 }
 /*---table---------------*/
 /*---footer---------------*/
-footer{
+footer {
+    margin-top 10px;
     padding-top: 5px;
     border-top: solid;
     border-width: 5px;
